k8s/staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-planeteclipse-org
  namespace: foundation-internal-webdev-apps
  labels:
    app: planeteclipse-org
    environment: staging
spec:
  selector:
    matchLabels:
      app: planeteclipse-org
      environment: staging
  replicas: 1
  progressDeadlineSeconds: 1200
  template:
    metadata:
      labels:
        app: planeteclipse-org
        environment: staging
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: speed
                operator: NotIn
                values:
                - fast
            weight: 1
      containers:
      - name: nginx
        image: eclipsefdn/nginx:stable-alpine-for-staging
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: planet-www
          mountPath: /usr/share/nginx/html/staging
        resources:
          limits:
            cpu: '1'
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        livenessProbe:
          # cannot use http probe because / and below are protected by auth_basic
          exec:
            command:
            - test 
            - -f
            - /usr/share/nginx/html/staging/index.html
          initialDelaySeconds: 900
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          # cannot use http probe because / and below are protected by auth_basic
          exec:
            command:
            - test 
            - -f
            - /usr/share/nginx/html/staging/index.html
          initialDelaySeconds: 5
          periodSeconds: 3
          timeoutSeconds: 5
      - name: planet-venus
        image: eclipsefdn/planeteclipse.org:latest
        volumeMounts:
        - name: planet-www
          mountPath: /var/planet/www
        - name: planet-cache
          mountPath: /var/planet/cache
        resources:
          limits:
            cpu: '1'
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 256Mi
      volumes:
      - name: planet-www
        emptyDir: {}
      - name: planet-cache
        emptyDir: {}
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: staging-planeteclipse-org
  namespace: foundation-internal-webdev-apps
spec:
  ports:
  - name: "http"
    port: 80
    protocol: "TCP"
    targetPort: 8080
  selector:
    app: planeteclipse-org
    environment: staging
---
apiVersion: "route.openshift.io/v1"
kind: "Route"
metadata:
  name: staging-planeteclipse-org
  namespace: foundation-internal-webdev-apps
  annotations:
    haproxy.router.openshift.io/timeout: 20s
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: "planeteclipse.org"
  path: "/staging"
  port:
    targetPort: "http"
  tls:
    insecureEdgeTerminationPolicy: "Redirect"
    termination: "edge"
  to:
    kind: "Service"
    name: staging-planeteclipse-org
    weight: 100
